# advanced-projectC

./: README.md
week2/: parser.py  pyproject.toml  readme.md
week2/fiveG/: ping.txt  pingRTT.txt  traceroute.txt
week2/parsed/: readme.md
week2/wifi/: iperf3_result_20231019143630.txt  iperf3_result_20231019143643.txt  iperf3_result_20231019143715.txt  iperf3_result_20231019143725.txt  iperf3_result_20231019143736.txt  iperf3_result_20231019143751.txt  iperf3_result_20231019143811.txt  iperf3_result_20231019143821.txt  iperf3_result_20231019143834.txt  iperf3_result_20231019143850.txt  iperf3_result_20231019143901.txt  iperf3_result_20231019143911.txt  iperf3_result_20231019143922.txt  iperf3_result_20231019143932.txt  iperf3_result_20231019143943.txt  iperf3_result_20231019143953.txt  iperf3_result_20231019144004.txt  iperf3_result_20231019144014.txt  iperf3_result_20231019144025.txt  iperf3_result_20231019144035.txt  iperf3_result_20231019144046.txt  iperf3_result_20231019144056.txt  iperf3_result_20231019144107.txt  iperf3_result_20231019144117.txt  iperf3_result_20231019144128.txt  iperf3_result_20231019144138.txt  iperf3_result_20231019144148.txt  iperf3_result_20231019144159.txt  iperf3_result_20231019144209.txt  iperf3_result_20231019144214.txt  iperf3_result_20231019144219.txt  iperf3_result_20231019144226.txt  iperf3_result_20231019144232.txt  iperf3_result_20231019144244.txt  iperf3_result_20231019144245.txt  iperf3_result_20231019144255.txt  iperf3_result_20231019144256.txt  iperf3_result_20231019144306.txt  iperf3_result_20231019144316.txt  (+75 more)
(+1639 files in other folders)
