[tool.poetry]
name = "week2"
version = "0.1.0"
description = ""
authors = ["takeshiho0531 <kawadatakeshiho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
tqdm = "^4.66.1"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
